# bindiff-mcp

./: README.md  main.py  pyproject.toml  run_analysis.py
src/: config.py  server.py
src/core/: bindiff_runner.py  ida_runner.py  idalib_helper.py  parser.py
src/utils/: temp_manager.py
